--- a/owl_carousel.html
+++ b/owl_carousel.html
@@ -51,7 +51,12 @@
         .owl-nav button:hover {
           background: #B3A032 !important;
         }
-
+        .owl-theme .owl-dots .owl-dot span {
+            background: #B3A032;
+        }
+        .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+            background: #0F6938;
+        }
     </style>
     <section>
       <div class="container pt-5">
