--- a/toastr.html
+++ b/toastr.html
@@ -34,6 +34,13 @@ return redirect()->back()->with('success','Added Successfully Done');
         toastr.options={ "closeButton":true, "progressBar":true, }
         toastr.error("{{ session('error')}}")
     @endif
+    // Validation errors
+    @if ($errors->any())
+        toastr.options = { "closeButton": true, "progressBar": true }
+        @foreach ($errors->all() as $error)
+            toastr.error("{{ $error }}");
+        @endforeach
+    @endif
 </script>
 
 
