--- a/validation.html
+++ b/validation.html
@@ -25,6 +25,7 @@ $request->validate([
 ]);
 
 $this->validate($request, [
+    'name' => 'unique:rooms,name,' . $id, // Ignore the current record's name FOR UPDATE SLUG
     'name' => 'required|exists:users,email|unique:users|string|nullable|date|min:22|max:255|array|numeric|confirmed',
     'email' => 'exists:users,email|email',
     'image' => 'image|mimes:jpeg,png,jpg,gif,bmp|max:2048',
