--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                   <a href="./seo.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">SEO</a>
                   <a href="./crop_image.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Crop Image </a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+                  <a href="./cart_without_login.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cart without login</a>
 
 
 
