--- a/blade.html
+++ b/blade.html
@@ -188,6 +188,8 @@ update
                         @endforeach
                         </div>
                     </div>
+<input type="date" min="<?= date('Y-m-d'); ?>">
+<input type="number" min="1">
         </textarea>
       </div>
     </div>
