--- a/blade.html
+++ b/blade.html
@@ -190,6 +190,7 @@ update
                     </div>
 <input type="date" min="<?= date('Y-m-d'); ?>">
 <input type="number" min="1">
+<input type="text" minlength="11" maxlength="11">
         </textarea>
       </div>
     </div>
