--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
                   <a href="./light_dark.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Light Dark</a>
                   <a href="./seo.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">SEO</a>
                   <a href="./crop_image.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Crop Image </a>
-                  <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
                   <a href="./setting_service_provider.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">setting_service_provider</a>
                   <a href="./app_name_change.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">app_name_change</a>
                   <a href="./cart_without_login.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cart without login</a>
+                  <a href="./embed_map_link.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">embed_map_link</a>
+                  <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
 
