--- a/toastr.html
+++ b/toastr.html
@@ -18,7 +18,7 @@ return redirect()->back()->with('success','Added Successfully Done');
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style>
     .toast-success { background-color: black !important;  } 
-    .toast.toast-success { border-radius: 1rem !important; }
+    .toast.toast-success, .toast.toast-error{ border-radius: 1rem !important; opacity: 1 !important; }
 </style>
           
 <!--ajax js-->
