--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                   <a href="./app_name_change.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">app_name_change</a>
                   <a href="./cart_without_login.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cart without login</a>
                   <a href="./embed_map_link.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">embed_map_link</a>
+                  <a href="./dynamic_accordion.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">dynamic_accordion</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
