--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                   <a href="./embed_map_link.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">embed_map_link</a>
                   <a href="./dynamic_accordion.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">dynamic_accordion</a>
                   <a href="./password_hide_show.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">password_hide_show</a>
+                  <a href="./qr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">QR Code</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
