--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                   <a href="./dynamic_accordion.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">dynamic_accordion</a>
                   <a href="./password_hide_show.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">password_hide_show</a>
                   <a href="./qr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">QR Code</a>
+                  <a href="./time.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Time</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
