--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                   <a href="./qr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">QR Code</a>
                   <a href="./time.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Time</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+                  <a href="./sound_notification_pusher.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sound_notification_pusher</a>
 
 
 
