--- a/command.html
+++ b/command.html
@@ -19,6 +19,7 @@ https://www.php.net/releases/
           
 composer create-project laravel/laravel ProjectName
 composer create-project laravel/laravel:^8.0 ProjectName
+composer create-project laravel/laravel=11 ProjectName
 cd ProjectName
 php -v
 php artisan --version
