--- a/command.html
+++ b/command.html
@@ -12,6 +12,12 @@
     <div class="container pt-4">
       <div class="row">
         <textarea name="" id="" cols="200" rows="20" class="form-control">   
+single table change 
+selected table drop first
+change migration file 
+php artisan migrate:rollback --path=/database/migrations/2025_01_15_125326_create_tablename_table.php
+php artisan migrate --path=/database/migrations/2025_01_15_125326_create_tablename_table.php
+          
 https://www.apachefriends.org/download.html
 https://getcomposer.org/download/
 https://nodejs.org/en/download   
