--- a/blade.html
+++ b/blade.html
@@ -19,6 +19,9 @@
 <a href="{{url('blog-category',$category->id)}}" class="{{ $category->id == $coursecategory->id ? 'active' : '' }}"><i class="bi bi-arrow-right-circle"></i><span>{{$category->name}}</span></a>
 @endforeach
 
+Bangladeshi time
+{{ \Carbon\Carbon::parse($last_order->created_at)->setTimezone('Asia/Dhaka')->format('d M Y - h:i A') }}
+
 {{Str::limit($country1->name,3)}}
 {{ Auth::user()->name }}
 @php $order = \App\Models\Order::where('course_id', $Course->id)->where('user_id',Auth::user()->id)->first(); @endphp
