--- a/controller.html
+++ b/controller.html
@@ -107,6 +107,7 @@ if($request->hasFile('image')) {
 }    
 php.ini search extension=fileinfo remove ; OR
 composer require intervention/image:^2.7 --ignore-platform-req=ext-fileinfo [not recommended]
+in cpanel Select PHP Version -> fileinfo ENABLE
 ---------------------------------------------------------------------------
 DIFFERENT IMAGE   
 ---------------------------------------------------------------------------        
