--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                   <a href="./password_hide_show.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">password_hide_show</a>
                   <a href="./qr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">QR Code</a>
                   <a href="./time.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Time</a>
-                  <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+                  <a href="./auto_run_function.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">auto_run_function</a>
                   <a href="./sound_notification_pusher.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sound_notification_pusher</a>
+                  <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
 
