--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                   <a href="./cart_without_login.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cart without login</a>
                   <a href="./embed_map_link.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">embed_map_link</a>
                   <a href="./dynamic_accordion.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">dynamic_accordion</a>
+                  <a href="./dynamic_navs_tabs.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">dynamic_navs_tabs</a>
                   <a href="./password_hide_show.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">password_hide_show</a>
                   <a href="./qr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">QR Code</a>
                   <a href="./time.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Time</a>
