--- a/authentication.html
+++ b/authentication.html
@@ -12,6 +12,16 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
+Laravel 10 UI Auth
+-----------------------------------------------------------------------
+composer create-project "laravel/laravel:^10.0" project-name
+composer require laravel/ui 
+php artisan ui bootstrap --auth 
+npm install
+npm run dev 
+npm install --save-dev vite laravel-vite-plugin
+npm run build
+      
 Google Auth With Getstrem
 -----------------------------------------------------------------------
 composer create-project laravel/laravel google_login    
