--- a/seo.html
+++ b/seo.html
@@ -22,6 +22,7 @@ xml sitemap
 
 composer require spatie/laravel-sitemap
 
+public/sitemap.xml
 use Spatie\Sitemap\Sitemap;
 use Spatie\Sitemap\Tags\Url;
 Sitemap::create()
