--- a/seo.html
+++ b/seo.html
@@ -60,29 +60,33 @@ Sitemap: http://yourdomain.com/sitemap.xml
 <img src="" alt="image" lazy="loading">
 
 
-schema.org
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Best Solution BB",
-  "url": "https://www.bestsolutionbb.com"
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Your Site Name",
-  "url": "http://yourdomain.com",
-  "logo": "http://yourdomain.com/logo.png",
-  "sameAs": [
-    "http://www.facebook.com/your-profile",
-    "http://www.twitter.com/yourProfile",
-    "http://plus.google.com/your_profile"
-  ]
-}
-</script>
+--------------------
+<head>
+...
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Arman Sharif",
+      "url": "https://www.armansharif.com"
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Mariyam Traders Limited",
+      "url": "https://armansharif.com",
+      "logo": "https://armansharif.com/logo.webp",
+      "sameAs": [
+        "https://www.facebook.com/armansharif",
+        "https://www.linkedin.com/in/armansharif"
+      ]
+    }
+    </script>
+</head>
+-----------------
 
 
 
