--- a/seo.html
+++ b/seo.html
@@ -86,10 +86,14 @@ Sitemap: http://yourdomain.com/sitemap.xml
     }
     </script>
 </head>
------------------
+--------------------------------------------
+google search console
 
-
-
+url prefix
+https://armansharif.com/
+html tag copy and paste on <head> ... </head>
+add sitemap.xml
+---------------------------------------------
 composer require artesaos/seotools
 
 php artisan vendor:publish --provider="Artesaos\SEOTools\Providers\SEOToolsServiceProvider"
