--- a/seo.html
+++ b/seo.html
@@ -89,6 +89,8 @@ Sitemap: http://yourdomain.com/sitemap.xml
 --------------------------------------------
 google search console
 
+new or Add property
+
 url prefix
 https://armansharif.com/
 html tag copy and paste on <head> ... </head>
