--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                   <a href="./sound_notification_pusher.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sound_notification_pusher</a>
                   <a href="./load_more.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">load_more</a>
                   <a href="./hostinger.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">hostinger</a>
+                  <a href="./sweetalert2.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sweetalert2</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
