--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                   <a href="./load_more.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">load_more</a>
                   <a href="./hostinger.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">hostinger</a>
                   <a href="./sweetalert2.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sweetalert2</a>
+                  <a href="./otp_email.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">otp_email</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
