--- a/otp_email.html
+++ b/otp_email.html
@@ -18,7 +18,8 @@
         $table->dateTime('otp_expires_at')->nullable();
     });
 php artisan migrate
-
+php artisan make:controller Auth/OtpLoginController
+          
 use App\Http\Controllers\Auth\OtpLoginController;
 
 Route::get('/login', [OtpLoginController::class, 'showEmailForm'])->name('login');
@@ -28,8 +29,6 @@ Route::get('/verify-otp', [OtpLoginController::class, 'showOtpForm'])->name('ver
 Route::post('/verify-otp', [OtpLoginController::class, 'verifyOtp'])->name('verify.otp');
 
 Route::middleware(['auth'])->get('/dashboard', fn() => view('dashboard'))->name('dashboard');
-
-php artisan make:controller Auth/OtpLoginController
 
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
@@ -104,6 +103,7 @@ php artisan make:mail OtpMail
 
 App/Mail/OtpMail.php
 
+use Queueable, SerializesModels;
 public $otp;
 
 public function __construct($otp)
