--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                   <a href="./hostinger.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">hostinger</a>
                   <a href="./sweetalert2.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sweetalert2</a>
                   <a href="./otp_email.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">otp_email</a>
+                  <a href="./button_loading.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">button_loading</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
