--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                   <a href="./sweetalert2.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">sweetalert2</a>
                   <a href="./otp_email.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">otp_email</a>
                   <a href="./button_loading.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">button_loading</a>
+                  <a href="./cron_job.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cron_job</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
