--- a/cron_job.html
+++ b/cron_job.html
@@ -84,6 +84,9 @@ go to cpanel search Cron Jobs - Add New time select you want
 Command
 cd /home/armansha/email.armansharif.com && /usr/local/bin/php artisan schedule:run >> /dev/null 2>&1
 
+hostinger
+/opt/alt/php82/usr/bin/php /home/u868502852/lexiconeltc.com/public_html/artisan schedule:run >> /dev/null 2>&1
+/usr/bin/php /home/u868502852/domains/lexiconeltc.com/public_html/artisan schedule:run >> /dev/null 2>&1
         </textarea>
       </div>
     </div>
