--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                   <a href="./otp_email.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">otp_email</a>
                   <a href="./button_loading.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">button_loading</a>
                   <a href="./cron_job.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cron_job</a>
+                  <a href="./email_config_check.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">email_config_check</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
