--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                   <a href="./cron_job.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">cron_job</a>
                   <a href="./email_config_check.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">email_config_check</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+                  <a href="./delete_multiple.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">delete_multiple</a>
 
 
 
