--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   <a href="./seeder_faker.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Seeder & Faker</a>
                   <a href="./route.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Route</a>
                   <a href="./controller.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Controller</a>
+                  <a href="./app_service_provider.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">app_service_provider</a>
                   <a href="./image_controller.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">image controller</a>
                   <a href="./model.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Model</a>
                   <a href="./cache_clear.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Cache Clear</a>
