--- a/command.html
+++ b/command.html
@@ -31,7 +31,8 @@ https://www.apachefriends.org/download.html
 https://getcomposer.org/download/
 https://nodejs.org/en/download   
 https://www.php.net/releases/
-          
+
+composer create-project "laravel/laravel:^10.0" projectName       
 composer create-project laravel/laravel ProjectName
 composer create-project laravel/laravel:^8.0 ProjectName
 composer create-project laravel/laravel=11 ProjectName
