--- a/github.html
+++ b/github.html
@@ -129,6 +129,7 @@ MULTIPLE GIT ACCOUNT USE
 ----------------------------------------------------------------------------------
 in terminal
 -----------
+make a folder .ssh at C:\Users\HP
 ssh-keygen -t ed25519 -C "arman.hub.bd@gmail.com"
 C:\Users\HP/.ssh/id_ed25519_arman-hub-bd
 
