--- a/github.html
+++ b/github.html
@@ -12,6 +12,14 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control">  
+
+git init
+git add -A
+git commit -m "first commit"
+git branch -M main
+git remote add origin COPY_PASTE
+git push -u origin main
+
 --------------------------------------------------------------------------------------------------------------------------------
 git init
 git add README.md
