--- a/github.html
+++ b/github.html
@@ -28,6 +28,12 @@ git branch -M main
 git remote add origin https://github.com/___/___.git
 git push -u origin main
 
+--------------------------------------------------------------------------------------------------------------------------------
+git clone COPY_PAST
+git fetch --all
+git branch -a
+git checkout arman
+--------------------------------------------------------------------------------------------------------------------------------
 git clone https://github.com/___/___.git (তৈরি করা অনলাইনের প্রোজেক্ট লোকালে নিয়ে আসতে)
 
 git pull origin branch_name (লোকালে ২য় বার কাজ শুরু করার আগে অনলাইন থেকে আগে উঠিয়ে আনতে হবে)
@@ -89,7 +95,43 @@ git reset --hard HEAD^ (ager commit er obosthay cole jabe)
 git push origin master (local e kaj kora hole jkn online e seta upload korte hoy)
           
 code . ()
-		
+			
+----------------------------------------------------------------------------------
+MULTIPLE GIT ACCOUNT USE
+----------------------------------------------------------------------------------
+in terminal
+-----------
+make a folder .ssh at C:\Users\HP
+ssh-keygen -t ed25519 -C "arman.hub.bd@gmail.com"
+C:\Users\HP/.ssh/id_ed25519_arman-hub-bd
+
+go to online
+Settings -> SSH and GPG keys ->
+for test, create a new private repo
+now open the file "id_ed25519_arman9022.pub" copy and paste in remote SSH key
+
+create a file "config" in .ssh
+---------------------------------
+Host arman9022 github.com
+	HostName github.com
+	PreferredAuthentications publickey
+	IdentityFile ~/.ssh/id_ed25519_arman9022
+
+Host arman109022 github.com
+	HostName github.com
+	PreferredAuthentications publickey
+	IdentityFile ~/.ssh/id_ed25519_arman109022
+
+[ jeita kaj kora hobe seita first e rakhe hobe ]
+
+git clone 
+git@github.com:arman9022/team_test.git
+git@arman9022:arman9022/team_test.git
+yes
+
+/.ssh
+ssh-add .\id_ed25519_arman9022
+	
 -----------------------
 Team Work
 -----------------------
@@ -132,45 +174,6 @@ abc
 | Name | Email |
 | --- | --- |
 | Arman | arman.p2c@gmail.com |
-
-MULTIPLE GIT ACCOUNT USE
-----------------------------------------------------------------------------------
-in terminal
------------
-make a folder .ssh at C:\Users\HP
-ssh-keygen -t ed25519 -C "arman.hub.bd@gmail.com"
-C:\Users\HP/.ssh/id_ed25519_arman-hub-bd
-
-go to online
-Settings -> SSH and GPG keys ->
-for test, create a new private repo
-now open the file "id_ed25519_arman9022.pub" copy and paste in remote SSH key
-
-create a file "config" in .ssh
----------------------------------
-Host arman9022 github.com
-	HostName github.com
-	PreferredAuthentications publickey
-	IdentityFile ~/.ssh/id_ed25519_arman9022
-
-Host arman109022 github.com
-	HostName github.com
-	PreferredAuthentications publickey
-	IdentityFile ~/.ssh/id_ed25519_arman109022
-
-[ jeita kaj kora hobe seita first e rakhe hobe ]
-
-git clone 
-git@github.com:arman9022/team_test.git
-git@arman9022:arman9022/team_test.git
-yes
-
-/.ssh
-ssh-add .\id_ed25519_arman9022
-
-----------------------------------------------------------------------------------
-remote 
-----------------------------------------------------------------------------------
 
 
         </textarea>
